--- a/index.html
+++ b/index.html
@@ -5,13 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Basic Web Page by Asif</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="icon" type="image/x-icon" href="/funfiles/Sans.webp">
+    <link rel="icon" type="image/x-icon" href="/funfiles/sans.jpg">
 
 </head>
 <body>
     <div class="banner">
+        
         <div class="navbar">
-            <img src="/funfiles/Cool Text - Xcillence 458892477367626.png" alt="logo">
+            <img src="/funfiles/Xcillence.png" alt="logo">
             <ul>
                 <li><a href="#">Home</a></li>
                 <li><a href="#">Browse</a></li>
