--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="banner">
         
         <div class="navbar">
-            <img src="/funfiles/Xcillence.png" alt="logo">
+            <img src="funfiles/Xcillence.png" alt="logo">
             <ul>
                 <li><a href="#">Home</a></li>
                 <li><a href="#">Browse</a></li>
