--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Basic Web Page by Asif</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="icon" type="image/x-icon" href="funfiles/sans.jpg">
+    <link rel="icon" type="image/x-icon" href="funfiles/Sans.webp">
 
 </head>
 <body>
